syntax = "proto3";

message PluginInstance {
  // Widget ID (meaningful only for bi-directional plugins)
  string id = 1;

  // Dictionary with args for the plugin.
  string args_json = 2;

  // We'll probably want to transmit dataframe data separately (not in JSON).
//  DataFrame args_data_frame = 4;

  // ID that uniquely identifies the plugin this is an instance of.
  // (Multiple PluginInstances can all share the same plugin type.)
  // If the client has not yet seen this plugin type before, it will
  // download the plugin's source code from the server via HTTP.
  string plugin_id = 3;
}
